Trying to add a dialog

--- a/app/components/todo-list.component.html
+++ b/app/components/todo-list.component.html
@@ -1,1 +1,3 @@
-<Label text="testing from html"></Label>
+<GridLayout rows="*, 60" columns="*, 100">
+    <Button text="Add" (tap)="addNewList()" row="1" col="1"></Button>
+</GridLayout>
